# reforma_tributaria_api

./: .env  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 02b58d1e10dd_adding_unique_constraint_to_ip_address.py  051faf191d0e_adding_email_cpf_and_cnae_description_.py  0ea60c18d0b7_creating_table_company.py  0ea60c18d0b7_creating_table_customer.py  187cd04ea76b_adding_ip_column_in_users_table.py  473659f1888d_create_contract_table.py  6379a815ca8d_add_user_id_fk_to_contract_table.py  63f4ecb2683a_adding_column_is_authenticated_in_users_.py  a876fcfb9a42_create_code_table.py  b5b35a0ad694_add_customer_id_fk_to_users_table.py  b77484388a63_adding_cnpj_column_in_company_table.py  d3a8af7dd9d3_create_users_table.py
src/: main.py
src/adapters/repository/: autentication_repository.py  company_repository.py  contract_repository.py  user_repository.py
src/application/controllers/: autentication_controller.py  company_controller.py  customer_controller.py  ncm_controller.py  rt25_controller.py  user_controller.py
src/application/use_cases/: autentication_use_cases.py  company_use_cases.py  ncm_use_cases.py  security.py  user_use_cases.py
src/application/utils/: email_service.py  utils.py
src/domain/entities/: __init__.py  code_entity.py  company_entity.py  contract_entity.py  customer_entity.py  user_classes.py  user_entity.py
src/domain/models/: company_models.py  contract_models.py  customer_models.py  ncm_models.py  user_models.py
src/infrastructure/: database.py  security_docs.py
src/infrastructure/spreadsheet_database/: .~lock.Planilha_NCM.xls#  .~lock.Planilha_NCM.xlsx#  Planilha_NCM.xls  Planilha_NCM.xlsx
